@@ -2,6 +2,7 @@
 v4.3.0-git
 ----------
 
+[jan] Display task list background color in basic view.
 [jan] Import snooze information from iCalendar alarms.
 [jan] Import iCalendar 2.0 alarms.
 [jan] Import and export recurrence rules to iCalendar.
